language/move-prover/tests/sources/functional/global_invariants.exp
Move prover returns: exiting with boogie verification errors
error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:18:9 ───
    │
 18 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:34:5: create_R_invalid
    =         account = <redacted>
    =     at tests/sources/functional/global_invariants.move:36:9: create_R_invalid

error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:20:9 ───
    │
 20 │         invariant update [global] forall a: address where old(exists_R(a)): exists<R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:58:5: remove_R_invalid
    =         account = <redacted>,
    =         $t1 = <redacted>
    =     at tests/sources/functional/global_invariants.move:61:63: remove_R_invalid
    =     at tests/sources/functional/global_invariants.move:60:34: remove_R_invalid
    =     at tests/sources/functional/global_invariants.move:61:43: remove_R_invalid

error: global memory invariant does not hold

    ┌── tests/sources/functional/global_invariants.move:18:9 ───
    │
 18 │         invariant [global] forall a: address where exists<R>(a): exists<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/global_invariants.move:49:5: remove_S_invalid
    =         account = <redacted>,
    =         $t1 = <redacted>
    =     at tests/sources/functional/global_invariants.move:52:63: remove_S_invalid
    =     at tests/sources/functional/global_invariants.move:51:34: remove_S_invalid
    =     at tests/sources/functional/global_invariants.move:52:43: remove_S_invalid
